Fix styling for results and squash bugs.

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,3 +1,8 @@
 .container {
-	margin-top: 60px;
+	/*margin-top: 150px;*/
+}
+
+#result {
+  background-color: #bdc3c8;
+  font-size: 2em;
 }
