--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -124,7 +124,7 @@ i {
 #headerwrap {
 	/* background: url(../img/bg01.jpg) no-repeat center top; */
 	background-color: #3498db;
-	margin-top: -20px;
+	margin-top: -110px;
 	padding-top:200px;
 	background-attachment: relative;
 	background-position: center center;
@@ -143,7 +143,7 @@ i {
 }
 
 #headerwrap h1 {
-	margin-top: 60px;
+	margin-top: 2S0px;
 	margin-bottom: 15px;
 	color: white;
 	font-size: 45px;
